--- a/TimeSheetApp/Client/_Imports.razor
+++ b/TimeSheetApp/Client/_Imports.razor
@@ -8,3 +8,6 @@
 @using Microsoft.JSInterop
 @using TimeSheetApp.Client
 @using TimeSheetApp.Client.Shared
+@using Syncfusion.Blazor
+@using Syncfusion.Blazor.Grids
+@using Syncfusion.Blazor.Data
